--- a/blog/source/_posts/需求工程部分知识点.md
+++ b/blog/source/_posts/需求工程部分知识点.md
@@ -1,5 +1,5 @@
 ---
-title: 需求工程部分知识点
+title: 需求工程部分考试知识点
 date: 2019-06-23 19:13:40
 tags:
  - 需求工程
@@ -11,12 +11,12 @@ categories:
  3. SRS（Software Requirements Specification）是软件需求规格说明书
  4. 高质量的SRS需要满足：完整性、一致性、可追踪行、可修改性。
  5. 涉众：与待开发系统有利益关系的人员或组织。其本身并不一定与系统开发有直接利益关系。
- 6. 需求获取信息的来源可能有哪些：涉众、硬数据、相关产品（现有系统等）、重要文档、相关技术标准可技术法规。
+ 6. 需求获取信息的来源可能有哪些：涉众、硬数据、相关产品（现有系统等）、重要文档、相关技术标准和技术法规。
  7. 需求获取的方法：面向目标（面向对象）、基于场景、面向方面、面向视点、基于知识。
  8. 三类与需求获取相关的现有系统：遗留系统和原有系统、竞争对手的系统、以及类似系统。
  9. 需求获取的常用方法：传统方法、集体获取方法、原型、模型驱动方法、认知方法、基于上下文的方法。
  10. 文档审查的三种方法：需求重用、文档分析、需求剥离。
- 11. 数据流图（DFD）的基本元素：外部实体、过程、数据流和数据存储（或：动作对象、处理、数据流、数据存储对象）。
+ 11. 数据流图（DFD）的基本元素：外部实体、过程、数据流和数据存储。
  12. 涉众分析包含的活动：涉众识别、涉众描述、涉众评估、涉众选择。
  13. 需求工程原型方法步骤：确定原型需求、原型开发、原型评估、原型修正。
  14. 需求工程的方法分四类：面向对象、面向数据、面向控制、面向工程。
@@ -26,7 +26,7 @@ categories:
  18.  面谈中相关问题的组织结构：金字塔结构、漏斗结构、菱形结构。
  19. 数据流图（DFD）层次结构建立步骤：创建上下文图、发现并建立DFD片段、根据DFD片段组合产生层图、产生N层数据流图。
  20. 需求跟踪的实现方法有：矩阵、实体联系模型和交叉引用。
- 21. 通用的跟踪模型有：在系统定义领域跟踪需求、在实现领域跟踪模型、在测试领域跟踪模型。
+ 21. 通用的跟踪模型有：在系统定义领域跟踪需求、在实现领域跟踪需求、在测试领域跟踪需求。
  22. 软件需求包括不同层次分别是：业务需求、用户需求、功能需求、非功能需求。
  23. 功能需求三个体现层次：业务需求、用户需求、系统需求。
  24. 面向对象建模中用到的技术包括：对象模型、用例模型、行为模型、状态机模型和对象约束语言。
