--- a/blog/source/_posts/牛客网小白月赛12（华华听月月唱歌）.md
+++ b/blog/source/_posts/牛客网小白月赛12（华华听月月唱歌）.md
@@ -1,12 +1,12 @@
 ﻿---
-title: '(团体程序设计天梯赛)L2-006 树的遍历'
+title: '牛客网小白月赛12（华华听月月唱歌）'
 date: 2019-03-09 21:43:17
 tags:
  - Java
  - 贪心
 categories:
  - 贪心
- ---
+---
  
 链接：https://ac.nowcoder.com/acm/contest/392/A
 来源：牛客网
