--- a/blog/source/_posts/第十一届蓝桥杯校内赛_校内选拔赛（2020年）I题序列.md
+++ b/blog/source/_posts/第十一届蓝桥杯校内赛_校内选拔赛（2020年）I题序列.md
@@ -41,7 +41,7 @@ categories:
 
 
 
-由题目能够得知，第三位可能的数之于前两位有关。
+由题目能够得知，第三位可能的数只与前两位有关。
 初始第一位为n。第二位的范围为 1~n 。
 如果用T(n,m）表示以n为第一位，m为第二位的可能序列的话，那么对于n的解为 `T(n,1)+T(n,2)+...+T(n,n)`。
 而对于T(n,m)他的解可得为`T(n,m)=1+T(m,1)+T(m,2)+...+T(m,|n-m|-1)`。
