--- a/blog/source/_posts/百度2021校招Java研发工程师笔试 2020_9_3 T2&T3编程题.md
+++ b/blog/source/_posts/百度2021校招Java研发工程师笔试 2020_9_3 T2&T3编程题.md
@@ -1,31 +1,31 @@
-ï»¿---
-title: 'ç™¾åº¦2021æ ¡æ‹›Javaç ”å‘å·¥ç¨‹å¸ˆç¬”è¯• 2020_9_3 T2&T3ç¼–ç¨‹é¢˜'
+---
+title: '°Ù¶È2021Ð£ÕÐJavaÑÐ·¢¹¤³ÌÊ¦±ÊÊÔ 2020_9_3 T2&T3±à³ÌÌâ'
 date: 2020-9-4 16:45:21
 tags: 
- - ç¬”è¯•
+ - ±ÊÊÔ
  - dp
- - å·®åˆ†åŒºé—´
+ - ²î·ÖÇø¼ä
  - Java
 categories:
- - ç¬”è¯•
+ - ±ÊÊÔ
 ---
 
-åˆæ˜¯æ‹‰èƒ¯çš„ä¸€å¤©
+ÓÖÊÇÀ­¿èµÄÒ»Ìì
 ```java
 /**
- * ç¬¬äºŒé¢˜
- * ç»™å®šnå¤´å¥¶ç‰›ï¼Œæœ‰ m ä¸ªæ¡ä»¶ï¼Œæ»¡è¶³è¿™ m ä¸ªæ¡ä»¶çš„å¥¶ç‰›æ˜¯ä¼˜è´¨å¥¶ç‰›ã€‚
- * ç„¶åŽå°±æ˜¯ç»™å®š m ä¸ªæ¡ä»¶ï¼Œå¯¹äºŽæ¯ä¸ªæ¡ä»¶ç»™ k ä¸ªåŒºé—´ï¼Œåœ¨é—­åŒºé—´å†…æ˜¯æ»¡è¶³æ¡ä»¶çš„å¥¶ç‰›
- * ç„¶åŽå°±æ˜¯é—®æœ‰å¤šå°‘ä¸ªå¥¶ç‰›æ˜¯ä¼˜è´¨çš„ï¼Œå¹¶è¾“å‡ºå¥¶ç‰›çš„åºåˆ—å·ã€‚
+ * µÚ¶þÌâ
+ * ¸ø¶¨nÍ·ÄÌÅ££¬ÓÐ m ¸öÌõ¼þ£¬Âú×ãÕâ m ¸öÌõ¼þµÄÄÌÅ£ÊÇÓÅÖÊÄÌÅ£¡£
+ * È»ºó¾ÍÊÇ¸ø¶¨ m ¸öÌõ¼þ£¬¶ÔÓÚÃ¿¸öÌõ¼þ¸ø k ¸öÇø¼ä£¬ÔÚ±ÕÇø¼äÄÚÊÇÂú×ãÌõ¼þµÄÄÌÅ£
+ * È»ºó¾ÍÊÇÎÊÓÐ¶àÉÙ¸öÄÌÅ£ÊÇÓÅÖÊµÄ£¬²¢Êä³öÄÌÅ£µÄÐòÁÐºÅ¡£
  * 
- * å¤§æ¦‚æ€è·¯å°±æ˜¯å¯¹äºŽæ¯ä¸ªæ¡ä»¶ï¼Œåšä¸€ä¸ªå·®åˆ†ï¼Œå¾—å‡ºæ¯ä¸ªå¥¶ç‰›æ»¡è¶³æ¡ä»¶çš„ä¸ªæ•°ï¼Œè¾¾åˆ°mä¸ªå°±æ˜¯ä¼˜è´¨çš„äº†
- * è¿™é‡Œç”¨äº†å·®åˆ†åŒºé—´åšæ³•ï¼Œå’Œè¾“å…¥æµåŠ é€Ÿï¼Œé¿å…è¶…æ—¶ã€‚
- * ç„¶åŽåœ¨å·®åˆ†æ—¶è¿˜è¦åŽ»é™¤é‡å¤çš„åŒºé—´ï¼Œå¦åˆ™å°±ä¼šæŠŠä¸€ä¸ªæ¡ä»¶å½“åšä¸¤ä¸ªæ¡ä»¶ã€‚
+ * ´ó¸ÅË¼Â·¾ÍÊÇ¶ÔÓÚÃ¿¸öÌõ¼þ£¬×öÒ»¸ö²î·Ö£¬µÃ³öÃ¿¸öÄÌÅ£Âú×ãÌõ¼þµÄ¸öÊý£¬´ïµ½m¸ö¾ÍÊÇÓÅÖÊµÄÁË
+ * ÕâÀïÓÃÁË²î·ÖÇø¼ä×ö·¨£¬ºÍÊäÈëÁ÷¼ÓËÙ£¬±ÜÃâ³¬Ê±¡£
+ * È»ºóÔÚ²î·ÖÊ±»¹ÒªÈ¥³ýÖØ¸´µÄÇø¼ä£¬·ñÔò¾Í»á°ÑÒ»¸öÌõ¼þµ±×öÁ½¸öÌõ¼þ¡£
  * 
- * å¦‚æžœä¸æ‡‚å·®åˆ†çš„åšæ³•ï¼Œæœç´¢å·®åˆ†åŒºé—´
- * åªéœ€è¦å°†åŒºé—´çš„ç¬¬ä¸€ä½åŠ ä¸ŠåŒºé—´çš„åŠ æ•°ï¼ŒåŒºé—´çš„æœ€åŽä¸€ä½å‡åŽ»åŒºé—´çš„åŠ æ•°ï¼Œå°±èƒ½åšåˆ°å¯¹åŒºé—´çš„æ›´æ”¹ã€‚
+ * Èç¹û²»¶®²î·ÖµÄ×ö·¨£¬ËÑË÷²î·ÖÇø¼ä
+ * Ö»ÐèÒª½«Çø¼äµÄµÚÒ»Î»¼ÓÉÏÇø¼äµÄ¼ÓÊý£¬Çø¼äµÄ×îºóÒ»Î»¼õÈ¥Çø¼äµÄ¼ÓÊý£¬¾ÍÄÜ×öµ½¶ÔÇø¼äµÄ¸ü¸Ä¡£
  * 
- * æ‹‰èƒ¯ã€‚ã€‚ã€‚ç»“æŸå‰ååˆ†é’Ÿæ‰æ‰¾åˆ°ï¼Œç¬¬ä¸‰é¢˜ä¹Ÿæ²¡æ—¶é—´æ‰¾bugäº†ã€‚ã€‚ã€‚
+ * À­¿è¡£¡£¡£½áÊøÇ°Ê®·ÖÖÓ²ÅÕÒµ½£¬µÚÈýÌâÒ²Ã»Ê±¼äÕÒbugÁË¡£¡£¡£
  */
 import java.io.BufferedWriter;
 import java.io.IOException;
@@ -114,18 +114,18 @@ class Node implements Comparable<Node> {
 
 ```java
 /**
- * ç¬¬ä¸‰é¢˜
- * è¿™é¢˜åå«èµ°æ¥¼æ¢¯ï¼Œå’Œæ™®é€šè§è¿‡èµ°æ¥¼æ¢¯ä¸åŒçš„æ˜¯ï¼Œä¸èƒ½ä¸Žå‰ä¸¤æ¬¡èµ°çš„æ¥¼æ¢¯ä¸ªæ•°ç›¸åŒã€‚ã€‚ã€‚ï¼ˆå¤§æ¦‚æ˜¯å¼ºè¿«ç—‡æ‚£è€…ï¼‰
- * ä¸€å…±æœ‰nä¸ªæ¥¼æ¢¯ï¼Œæ¯æ¬¡å¯ä»¥èµ°1-mä¸ªæ¥¼æ¢¯ï¼Œm<7
- * é—®èµ°çš„æ–¹æ³•æ•°æ¨¡äºŽ1e9+7
+ * µÚÈýÌâ
+ * ÕâÌâÃû½Ð×ßÂ¥ÌÝ£¬ºÍÆÕÍ¨¼û¹ý×ßÂ¥ÌÝ²»Í¬µÄÊÇ£¬²»ÄÜÓëÇ°Á½´Î×ßµÄÂ¥ÌÝ¸öÊýÏàÍ¬¡£¡£¡££¨´ó¸ÅÊÇÇ¿ÆÈÖ¢»¼Õß£©
+ * Ò»¹²ÓÐn¸öÂ¥ÌÝ£¬Ã¿´Î¿ÉÒÔ×ß1-m¸öÂ¥ÌÝ£¬m<7
+ * ÎÊ×ßµÄ·½·¨ÊýÄ£ÓÚ1e9+7
  * 
- * ä»ç„¶æ˜¯dpçš„åšæ³•ï¼Œå°±æ˜¯æ‰©å±•åˆ°äº†ä¸‰ç»´ï¼Œå¯¹äºŽè¿™ä¸ªä¸‰ç»´ï¼Œè¡¨ç¤ºdp[å½“å‰ä½ç½®][å‰ä¸€æ¬¡èµ°çš„æ¥¼æ¢¯][å‰å‰ä¸€æ¬¡èµ°çš„æ¥¼æ¢¯]
- * å°±æ˜¯éåŽ†å‰ä¸€æ¬¡çš„æ‰€æœ‰åšæ³•ï¼Œæ‰¾åˆ°ä¸‰æ¬¡éƒ½ä¸ä¸€æ ·çš„èµ°æ³•åŠ èµ·æ¥ã€‚
+ * ÈÔÈ»ÊÇdpµÄ×ö·¨£¬¾ÍÊÇÀ©Õ¹µ½ÁËÈýÎ¬£¬¶ÔÓÚÕâ¸öÈýÎ¬£¬±íÊ¾dp[µ±Ç°Î»ÖÃ][Ç°Ò»´Î×ßµÄÂ¥ÌÝ][Ç°Ç°Ò»´Î×ßµÄÂ¥ÌÝ]
+ * ¾ÍÊÇ±éÀúÇ°Ò»´ÎµÄËùÓÐ×ö·¨£¬ÕÒµ½Èý´Î¶¼²»Ò»ÑùµÄ×ß·¨¼ÓÆðÀ´¡£
  * dp[i + j][j][k] += dp[i][k][l];
- * æœ¬æ¬¡èµ°j å‰ä¸€æ¬¡èµ°kï¼Œåœ¨å‰ä¸€æ¬¡èµ°l
- * è¿™æ ·å°† nä½ç½®çš„æ‰€æœ‰å‰ä¸¤æ¬¡èµ°æ³•åŠ èµ·æ¥å°±æ˜¯ç­”æ¡ˆ
+ * ±¾´Î×ßj Ç°Ò»´Î×ßk£¬ÔÚÇ°Ò»´Î×ßl
+ * ÕâÑù½« nÎ»ÖÃµÄËùÓÐÇ°Á½´Î×ß·¨¼ÓÆðÀ´¾ÍÊÇ´ð°¸
  * 
- * æœ¬é¢˜åˆæ˜¯æ‹‰èƒ¯çš„ä¸€é¢˜ã€‚ã€‚ç»“æŸäº”åˆ†é’Ÿæ‰¾åˆ°bug
+ * ±¾ÌâÓÖÊÇÀ­¿èµÄÒ»Ìâ¡£¡£½áÊøÊ®·ÖÖÓÕÒµ½bug
  */
 import java.util.Scanner;
 
@@ -137,14 +137,12 @@ public class Main2 {
 		long dp[][][] = new long[n + 8][8][8];
 		long mod = 1000000007;
 		for (int k = 1; k <= m; k++) {
-			for(int i = 1;i<=m;i++)
-				if(i!=k)
-					dp[k][k][i] = 1;
+			dp[k][k][0] = 1;
 		}
-		for (int i = 1; i < n; i++) {
+		for (int i = 0; i < n; i++) {
 			for (int j = 1; j <= m; j++) {
 				for (int k = 1; k <= m; k++)
-					for (int l = 1; l <= m; l++) {
+					for (int l = 0; l <= m; l++) {
 						if(l!=j&&l!=k&&j!=k) {
 							dp[i + j][j][k] += dp[i][k][l];
 						}
@@ -160,6 +158,7 @@ public class Main2 {
 		System.out.println(ans % mod);
 	}
 }
+
 
 ```
 
